tdf#74328: loading section page no. as 16 bit unsigned

The sprm sprmSPgnStart97 contains a 16 bit unsigned value. Test included.

Change-Id: I300e9a94c13666cf8e71d3613b8f1171c7314cdd
Reviewed-on: https://gerrit.libreoffice.org/24431
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Oliver Specht <oliver.specht@cib.de>